# noname

./: .gitmodules
admin_panel/: package.json
backend/: Cargo.toml  docker-compose.yml
backend/db/migrations/: V1__initial.sql  V2__server.sql
backend/src/: error.rs  extractor.rs  global.rs  lib.rs  main.rs  middleware.rs  response.rs  server.rs
backend/src/auth/: mod.rs
backend/src/driver/: db.rs
backend/src/model/: mod.rs  server.rs  user.rs
backend/src/routes/: auth.rs  server.rs
backend/src/service/: auth.rs  server.rs
backend/src/ws/: server.rs  user.rs
desktop/: package.json  pnpm-lock.yaml
desktop/src-tauri/: Cargo.toml  tauri.conf.json
website/: next.config.js  package.json  pnpm-lock.yaml  tsconfig.json
website/api/: baseQuery.ts  index.ts  user.ts
website/components/: LoginButton.tsx  Navbar.tsx  withAuth.tsx
website/pages/: _app.tsx  dashboard.tsx  index.tsx
website/pages/admin/: dashboard.tsx
website/store/: user.ts
website/styles/: globals.css
website/types/: index.ts
