[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
salvo = {version = "0.35", features=["extra"]}
tokio = { version = "1", features = ["macros"] }
tokio-stream = { version = "0.1", features = ["net"] }
serde = { version = "1.0.143", features = ["derive"] }
futures-util = { version = "0.3", default-features = false}
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
serde_json = "1.0"
once_cell = "1"
anyhow = "1"