[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
salvo = {version = "0.36", features=["extra"]}
tokio = { version = "1", features = ["macros"] }
tokio-stream = { version = "0.1", features = ["net"] }
serde = { version = "1.0.143", features = ["derive"] }
futures-util = { version = "0.3", default-features = false}
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
serde_json = "1.0"
once_cell = "1"
anyhow = "1"
dotenv = "0.15.0"
rbatis = "4.0"
rbdc-pg = "0.1.19"
rust-argon2 = "1.0"
chrono = { version="0.4.19", features=["serde"] }
jsonwebtoken = "8.1.1"
steam-auth = {version = "1.0.0", features=["reqwest-09x"]}
reqwest = {version = "0.11.12"}
rbs = { version = "0.1"}
refinery = {version = "0.8.6", features=["tokio-postgres"]}
tokio-postgres = "0.7.7"