[package]
name = "noname"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
serde = { version = "1.0.143", features = ["derive"] }
futures-util = { version = "0.3", default-features = false}
axum = { version = "0.5.16", features = ["ws", "headers"]}
tower-http = { version = "0.3.0", features = ["cors", "map-request-body"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"]}
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
serde_json = "1.0"
lazy_static = "1.4.0"
anyhow = "1"
dotenv = "0.15.0"
rbatis = "4.0"
rbdc-pg = "0.1.19"
rust-argon2 = "1.0"
chrono = { version="0.4.19", features=["serde"] }
jsonwebtoken = "8.1.1"
steam-auth = {version = "1.0.0", features=["reqwest-09x"]}
reqwest = {version = "0.11.12"}
rbs = { version = "0.1"}
refinery = {version = "0.8.6", features=["tokio-postgres"]}
tokio-postgres = "0.7.7"